html/css finished

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   <title>Style Pro</title>
 </head>
 <body>
@@ -15,13 +16,18 @@
     <div class="burger"></div>
   </header>
 
-  <section class="section1 howToDress">
-    <div class="wrapper">
-      <div class="howToDress-left">
-        <h2>
-          Comment bien s'habiller: les 15 règles que tous les hommes devraient apprendre
-        </h2>
+  <section class="section1">
+    <div class="row one">
+      <div class="left">
+        <h2>Comment bien s'habiller: les 15 règles que tous les hommes devraient apprendre</h2>
         <img class="image-left" src="./assets/img/tablier.jpg" alt="tablier en cuir">
+      </div>
+      <div class="right">
+        <img class="image-right" src="./assets/img/man.jpg" alt="homme bien habillé">
+      </div>
+    </div>
+    <div class="row two">
+      <div class="left">
         <h2>5 codes vestimentaires essentiels pour les hommes:</h2>
         <ol>
           <li>Style décontracté</li>
@@ -31,19 +37,17 @@
           <li>Style de tenue de cocktail</li>
         </ol>
       </div>
-      <div class="howToDress-right">
-        <img class="image-right" src="./assets/img/man.jpg" alt="homme bien habillé">
-        <div class="howToDress-bottom-right">
-          <img src="./assets/img/fringues.jpg" alt="photo de fringues">
-          <p>
-            Bienvenue dans notre de look professionnel 2019 pour l'homme moderne.
-            Nous avons divisé ce guide en plusieurs sections. Vous pouvez passer à la partie qui est la
-            plus importante pour vous.
-          </p>
-        </div>
+      <div class="right">
+        <img src="./assets/img/fringues.jpg" alt="photo de fringues">
+        <p>
+          Bienvenue dans notre guide de look professionnel 2019 pour l'homme moderne.
+          Nous avons divisé ce guide en plusieurs sections. Vous pouvez passer à la partie qui est la
+          plus importante pour vous.
+        </p>
       </div>
     </div>
   </section>
+
   <section class="section2">
     <div class="square square1"></div>
     <div class="square square2"></div>
@@ -58,6 +62,88 @@
       ut vero.</p>
   </section>
 
+  <section class="section3">
+    <div class="left">
+      <img src="./assets/img/taking-measurements.jpg" alt="photo d'un homme se faisant ">
+      <div class="wrapper">
+        <div class="card">
+          <div class="card-border">
+            <h2>Code vestimentaire professionnel pour hommes</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur cupiditate dolorem inventore
+              libero.</p>
+            <a href="#">Apprendre encore plus</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="right">
+      <div class="wrapper">
+        <h2>Comment démarrer une marque de vêtements réussie</h2>
+        <ol>
+          <li>Développez votre marque</li>
+          <li>Remplissez les espaces commerciaux</li>
+          <li>Crunch les chiffres</li>
+          <li>Créer une présence sur le web</li>
+          <li>Planifiez votre première collection</li>
+          <li>Préparez-vous à la fabrication</li>
+          <li>Créer un plan de vente</li>
+          <li>Faites passer le mot</li>
+          <li>Rechercher des partenaires ou des investisseurs</li>
+          <li>Trouvez l'aide appropriée</li>
+        </ol>
+      </div>
+    </div>
+  </section>
+
+
 </main>
+<footer>
+  <nav>
+    <div class="info">
+      <h3>Information sur l'entreprise</h3>
+      <ul>
+        <li>Qui sommes-nous ?</li>
+        <li>Affilié</li>
+        <li>responsabilité Social</li>
+      </ul>
+    </div>
+    <div class="aide">
+      <h3>Aide</h3>
+      <ul>
+        <li>Guides des tailles</li>
+        <li>Livraison</li>
+        <li>Retour</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>Contact</h3>
+      <ul>
+        <li>Nous contacter</li>
+        <li>Paiement</li>
+        <li>Avis de rappel</li>
+      </ul>
+    </div>
+    <div class="reseaux">
+      <h3>Retrouvez-nous sur</h3>
+      <ul>
+        <li><span class="iconify" data-icon="mdi:facebook-box" data-inline="false"></span></li>
+        <li><span class="iconify" data-icon="ph:instagram-logo-fill" data-inline="false"></span></li>
+        <li><span class="iconify" data-icon="mdi:twitter-box" data-inline="false"></span></li>
+        <li><span class="iconify" data-icon="mdi:pinterest-box" data-inline="false"></span></li>
+        <li><span class="iconify" data-icon="ic:baseline-tiktok" data-inline="false"></span></li>
+      </ul>
+      <form action="/">
+        <p>Abonnez-vous à notre newsletter pour suivre toute l'actualité</p>
+        <input type="email" name="newsletter" id="newsletter" placeholder="Votre adresse e-mail">
+        <input type="submit" value="S'abonner">
+      </form>
+
+    </div>
+  </nav>
+  <div class="copyright">
+    ©2021 Bob l'éponge - Tous droits réservés
+  </div>
+</footer>
+
 </body>
 </html>
