add burger menu in JS

--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+  <script src="./assets/js/index.js" defer></script>
   <title>Style Pro</title>
 </head>
 <body>
+<div id="menu" class="menu">
+  <div id="close" class="close"><span class="iconify" data-icon="mdi:close" data-inline="false"></span></div>
+  <nav>
+    <ul>
+      <li>Code véstimentaire</li>
+      <li>Démarrer une marque</li>
+      <li>Contactez-nous</li>
+    </ul>
+  </nav>
+</div>
 <main>
   <header>
     <div class="logo"><h1>Style Pro</h1></div>
-    <div class="burger"></div>
+    <div id="burger" class="burger"><span class="iconify" data-icon="cil:hamburger-menu" data-inline="false"></span>
+    </div>
   </header>
 
   <section class="section1">
